[package]
name = "sysx"
version = "0.6.3"
edition = "2024"

[lib]
doctest = false

[features]
default = []
f16 = []
f128 = []
unstable = ["f16", "f128"]

[dependencies]
rand = "0.9.0"
chrono = "0.4.40"
anyhow = "1.0.97"
colored = "3.0.0"
thiserror = "2.0.12"
once_cell = "1.21.0"
shell-words = "1.1.0"
lazy_static = "1.5.0"

[dependencies.regex]
version = "1.11.1"
default-features = false
features = ["std", "unicode-perl"]

[dev-dependencies]
tempfile = "3.18.0"
