[package]
name = "sysx"
version = "0.6.5"
edition = "2024"

[lib]
doctest = false

[dependencies]
rand = "0.9.1"
image = "0.25.6"
chrono = "0.4.41"
anyhow = "1.0.98"
colored = "3.0.0"
thiserror = "2.0.12"
once_cell = "1.21.3"
shell-words = "1.1.0"

[dependencies.regex]
version = "1.11.1"
default-features = false
features = ["std", "unicode-perl"]

[dev-dependencies]
tempfile = "3.19.1"
